--- a/apps/store-frontend/src/app/global.css
+++ b/apps/store-frontend/src/app/global.css
@@ -1,4 +1,4 @@
-INICIO DEL ARCHIVO [apps/store-frontend/src/app/global.css]
+/* apps/store-frontend/src/app/global.css */
 @import "tailwindcss";
 
 /*
@@ -59,4 +59,3 @@ body {
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
-FIN DEL ARCHIVO [apps/store-frontend/src/app/global.css]
